Apply fixes for color contrast in text

--- a/assets/sass/typography.element.scss
+++ b/assets/sass/typography.element.scss
@@ -36,7 +36,7 @@ p {
 }
 
 a {
-  color: var(--color-orange);
+  color: var(--color-orange-darker);
   font-weight: var(--font-weight-regular);
   text-decoration: underline;
 }
